# ai-lol-coach

./: .gitignore  CLAUDE.md  PROGRESS.md  pyproject.toml
.claude/: settings.local.json
backend/: .env.example  .gitignore  requirements.txt
backend/app/: main.py
backend/app/core/: config.py
backend/app/routers/: replay.py
backend/app/services/: analyzer.py  coach.py
backend/replay_parser/: __init__.py  parser.py
frontend/: package.json
ml/: requirements-mac.txt
ml/data/: champion_tracks.json  cipher_tables.json  handlers.json
ml/emulator/: __init__.py  arm64_emulator.py  brute_force_decoder.py  cipher_decode.py  decode_0013.py  decode_0228.py  dump_runtime.py  dump_via_suspended.py  emulator.py  extract_ciphers.py  find_all_deserializers.py  find_all_handlers.py  find_decrypt_rvas.py  ghidra_find_handlers.py  known_offsets.py  launch_replay.py  packet_decoder.py  pattern_scanner.py  pe_loader.py  rofl_to_json.py  unicorn_emulator.py  universal_decoder.py
ml/parsers/: chunk_parser.py  coaching_analyzer.py  game_state.py  movement_decoder.py  rofl_parser.py
ml/scraper/: README_SETUP.md  convert_to_sqlite.py  game_state.py  lcu_api.py  memory_reader.py  orchestrator.py
ml/scripts/: _debug_rofl.py  build_optimal_play_dataset.py  download_dataset.py  download_hf_replays.py  fetch_high_elo_matches.py  finetune.py  finetune_mlx.py  label_with_claude.py  parse_replays.py  prepare_training_data.py  train_classifier.py
ml/tools/: extract_ciphers.py  find_position_packets.py  movement_vis.html  scan_macos_dump.py  visualize_movement.py
(+3 files in other folders)
