[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-lol-coach"
version = "0.1.0"
description = "AI-powered League of Legends coaching from replay analysis"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
include = ["backend*", "ml*"]
